# qemu-ci

./: .gitlab-map-auto  .gitlab-map-manual  .mailmap  Kconfig.host  MAINTAINERS  README.md  blockdev.c  blockjob.c  build_ci_container.sh  configure  cpu-common.c  gitdm.config  hmp-commands-info.hx  hmp-commands.hx  iothread.c  meson.build  meson_options.txt  push_new_series.sh  pythondeps.toml  qemu-img.c  qemu-options.hx  target-info-def.c  target-info-qom.c  target-info-stub.c  target-info.c
.github/workflows/: build.yml  containers.yml  new_series.yml  upstream.yml
.gitlab-ci.d/: base.yml  buildtest.yml  macos.yml
accel/: accel-irq.c  accel-system.c
accel/kvm/: kvm-all.c
accel/mshv/: irq.c  mshv-all.c  trace-events
accel/tcg/: cpu-exec.c  cputlb.c  ldst_common.c.inc  tcg-accel-ops.c  tcg-all.c  translator.c  user-exec-stub.c  user-exec.c  watchpoint.c
accel/whpx/: whpx-common.c
backends/: cryptodev-vhost-user.c  cryptodev.c  hostmem.c  igvm-cfg.c  igvm.c  iommufd.c  rng.c  vhost-user.c
block/: accounting.c  cloop.c  commit.c  crypto.c  dmg.c  io.c  iscsi.c  parallels-ext.c  parallels.c  qapi.c  qcow2-bitmap.c  qcow2-snapshot.c  qcow2.c  qcow2.h  throttle-groups.c
block/export/: export.c  fuse.c
block/monitor/: bitmap-qmp-cmds.c
bsd-user/: main.c
configs/targets/: aarch64-softmmu.c  arm-softmmu.c  hexagon-linux-user.mak  hexagon-softmmu.mak  riscv32-softmmu.c  riscv64-softmmu.c
contrib/elf2dmp/: kdbg.h  main.c  qemu_elf.h
contrib/plugins/: execlog.c
contrib/vhost-user-gpu/: vhost-user-gpu.c  virgl.c  (+2 more)
crypto/: aes-helpers.c  block.c  cipher-gcrypt.c.inc  cipher-gnutls.c.inc  cipher-nettle.c.inc  cipher.c  cipherpriv.h  hmac-gcrypt.c  hmac-glib.c  ivgen-essiv.c  ivgen.c  secret_keyring.c
disas/: meson.build  riscv-xsf.c  riscv-xsf.h  riscv.c  riscv.h  sparc.c
gdbstub/: gdbstub.c  system.c  user.c
io/: channel-socket.c  channel.c
linux-user/: elfload.c  main.c  mmap.c  signal-common.h  signal.c  strace.c  syscall.c  syscall_defs.h
migration/: block-dirty-bitmap.c  channel.c  migration-hmp-cmds.c  migration.c  migration.h  multifd.c  options.c  postcopy-ram.c  postcopy-ram.h  qemu-file.c  qemu-file.h  ram.c  ram.h  rdma.c  savevm.c  savevm.h  trace-events  vmstate.c
monitor/: hmp-cmds.c  hmp.c  monitor-internal.h  monitor.c  qemu-config-qmp.c  qmp-cmds.c  qmp.c
net/: colo-compare.c  filter-rewriter.c  net.c  passt.c  tap.c  vhost-user.c  vhost-vdpa.c
plugins/: api.c
pyvenv/: meson.build
qapi/: acpi.json  block-core.json  block-export.json  block.json  char.json  common.json  compat.json  control.json  crypto.json  cxl.json  dump.json  introspect.json  job.json  machine-common.json  machine-s390x.json  machine.json  migration.json  misc-arm.json  misc-i386.json  misc.json  net.json  pci.json  qdev.json  qom.json  rocker.json  run-state.json  sockets.json  stats.json  tpm.json  transaction.json  ui.json  virtio.json  yank.json
qga/: channel-posix.c  commands-bsd.c  commands-linux.c  commands-posix-ssh.c  commands-posix.c  commands-win32.c  commands.c  guest-agent-core.h  main.c  meson.build  qapi-schema.json
qom/: object.c  object_interfaces.c  qom-qmp-cmds.c
rust/: Cargo.toml  meson.build
scripts/: archive-source.sh  arm_processor_error.py  checkpatch.pl  get_maintainer.pl  gitlab-map-check  make-release  meson-buildoptions.sh  probe-gdb-support.py  qmp_helper.py  run-functional-test.sh  uf2-to-flash.py
semihosting/: arm-compat-semi.c  console.c  guestfd.c  syscalls.c
stubs/: meson.build  xen-hw-stub.c
subprojects/: .gitignore  vm-memory-0.18-rs.wrap
subprojects/packagefiles/vm-memory-0.18-rs/: meson.build
system/: cpus.c  ioport.c  memory-internal.h  memory.c  physmem.c  qdev-monitor.c  qtest.c  ram-block-attributes.c  runstate.c  vl.c  watchpoint.c
tests/: Makefile.include
tests/tcg/aarch64_be/: meson.build
tests/tcg/alpha/: float_convd.ref  float_convs.ref  float_madds.ref  meson.build
tests/tcg/alpha/system/: meson.build
tests/tcg/arm/: Makefile.softmmu-target  fcvt.c  meson.build
tests/tcg/arm/system/: meson.build
tests/tcg/hexagon/: Makefile.softmmu-target  Makefile.target  invalid-slots.c  meson.build  overflow.c  test_pnew_jump_loads.c  valid-slots.c
tests/tcg/hexagon/system/: swi_ciad.S  system.ld
tests/tcg/hppa/: float_convd.ref  float_convs.ref  float_madds.ref  meson.build
tests/tcg/i386/: float_convd.ref  float_madds.ref  meson.build
tests/tcg/i386/system/: meson.build
tests/tcg/loongarch64/: meson.build
tests/tcg/loongarch64/system/: meson.build
tests/tcg/m68k/: float_convd.ref  float_convs.ref  float_madds.ref  meson.build
tests/tcg/mips/: float_convd.ref  float_convs.ref  meson.build
tests/tcg/mips64/: float_convs.ref  meson.build
tests/tcg/mips64el/: Makefile.target  float_convd.ref  float_madds.ref  meson.build
tests/tcg/or1k/: float_convd.ref  float_convs.ref  float_madds.ref  meson.build  test_addic.c  test_muli.c
tests/tcg/ppc64/: float_convd.ref  float_convs.ref  meson.build  vector.c  vsx_f2i_nan.c
tests/tcg/ppc64le/: Makefile.target  float_convd.ref  meson.build
tests/tcg/riscv64/: Makefile.softmmu-target  float_convd.ref  float_convs.ref  float_madds.ref  meson.build  smmpt-common.S  test-smmpt.S  test-smmpt34.S  test-smmpt52.S  test-smmpt64.S  test-vle32ff.S  test-xsfvqmacc.S
tests/tcg/riscv64/system/: meson.build
tests/tcg/s390x/: Makefile.target  console.c  cpacf-kdsa.c  cpacf-kimd.c  cpacf-klmd.c  cpacf-km.c  cpacf-kmac.c  cpacf-kmc.c  cpacf-kmctr.c  cpacf-pcc.c  cpacf-prno.c  cpacf.h  div.c  float_convd.ref  float_convs.ref  float_madds.ref  head64.S  meson.build  prno-trng.c  stckf.c
tests/tcg/s390x/system/: meson.build
tests/tcg/sh4/: float_convd.ref  float_convs.ref  float_madds.ref  meson.build
tests/tcg/tricore/: meson.build
tests/tcg/x86_64/: Makefile.target  float_madds.ref  meson.build
tests/tcg/x86_64/system/: meson.build
tests/tcg/xtensa/: crt.S  meson.build
ui/: console-vc.c  console.c  sdl2.c  vnc.c  vt100.c
util/: cpuinfo-aarch64.c  cpuinfo-i386.c  cutils.c  iova-tree.c  meson.build  qemu-thread-posix.c  rcu.c
(+1026 files in other folders)
