tests = []

tests += tcg_tests['multiarch-linux-user']['tests']

tests += {
  'test_add.c': {},
  #'test_addc.c': {},
  'test_addi.c': {},
  'test_addic.c': {},
  'test_and_or.c': {},
  'test_bf.c': {},
  'test_bnf.c': {},
  #'test_div.c': {},
  'test_divu.c': {},
  #'test_extx.c': {},
  'test_fx.c': {},
  'test_j.c': {},
  'test_jal.c': {},
  'test_lf_add.c': {},
  'test_lf_div.c': {},
  'test_lf_eqs.c': {},
  'test_lf_ges.c': {},
  'test_lf_gts.c': {},
  'test_lf_les.c': {},
  'test_lf_lts.c': {},
  'test_lf_mul.c': {},
  'test_lf_nes.c': {},
  'test_lf_rem.c': {},
  'test_lf_sub.c': {},
  'test_logic.c': {},
  #'test_lx.c': {},
  'test_movhi.c': {},
  'test_mul.c': {},
  'test_muli.c': {},
  'test_mulu.c': {},
  'test_sfeq.c': {},
  'test_sfeqi.c': {},
  'test_sfges.c': {},
  'test_sfgesi.c': {},
  'test_sfgeu.c': {},
  'test_sfgeui.c': {},
  'test_sfgts.c': {},
  'test_sfgtsi.c': {},
  'test_sfgtu.c': {},
  'test_sfgtui.c': {},
  'test_sfles.c': {},
  'test_sflesi.c': {},
  'test_sfleu.c': {},
  'test_sfleui.c': {},
  'test_sflts.c': {},
  'test_sfltsi.c': {},
  'test_sfltu.c': {},
  'test_sfltui.c': {},
  'test_sfne.c': {},
  'test_sfnei.c': {},
  'test_sub.c': {},
}

if 'qemu-or1k' in emulators
  tcg_tests += {
    'or1k-linux-user': {
      'cc': 'or1k-none-linux-musl-gcc',
      'cc_dockerfile': 'debian-all-test-cross',
      'cc_docker_host_arch': ['x86_64'],
      'cc_feat_cflags': cc_feat_cflags,
      'folder': 'or1k',
      'gdb_arch': 'or1k',
      'qemu': emulators['qemu-or1k'],
      'tests': tests,
    }
  }
endif
